--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "json-server": "^1.0.0-beta.3"
+    "@babel/cli": "^7.26.4",
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "json-server": "^1.0.0-beta.3",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
